# text_to_relations

./: .gitignore  CHANGELOG.md  DEVELOPING.md  LICENSE  Makefile  README.md  TUTORIAL.md  pyproject.toml  reqs.txt
examples/: README.md  extract_min_max.py  extract_stamp_description.py
src/text_to_relations/: __init__.py
src/text_to_relations.egg-info/: PKG-INFO  SOURCES.txt
src/text_to_relations/relation_extraction/: Annotation.py  ExtractionPhaseABC.py  RegexString.py  SentenceAnn.py  SpacyUtils.py  StringUtils.py  TokenAnn.py  __init__.py  extract_min_max_relation.py  extract_stamp_description.py  extraction_loop.py  min_max_phase_1.py  min_max_phase_2.py  min_max_phase_3.py
tests/: __init__.py
tests/relation_extraction_tests/: extract_min_max_relation.py  min_max_phase_1.py  min_max_phase_2.py  min_max_phase_3.py  test_Annotation.py  test_PhaseABC.py  test_RegexString.py  test_RegexStringBuilder.py  test_RegexStringConcatMethods.py  test_SentenceAnn.py  test_SpacyUtils.py  test_StringUtils.py  test_TokenAnn.py  test_extract_min_max.py  test_extract_stamp_description.py  test_extraction_loop.py
