[project]
name = "text_to_relations"
version = "0.1.2"
authors = [
  { name="Jerry Kurlandski", email="jkurlandski@gmail.com" },
]
description = "A tool for information and relation extraction using regular expressions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "spacy>=3.0",
    "typing_extensions>=4.0; python_version < '3.11'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jkurlandski01/text_to_relations"
Issues = "https://github.com/jkurlandski01/text_to_relations/issues"
Changelog = "https://github.com/jkurlandski01/text_to_relations/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["build", "twine", "mypy", "pylint"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"